feat: adding get account by user id endpoint
